--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 beautifulsoup4==4.9.1
 certifi==2020.4.5.1
 chardet==3.0.4
+et-xmlfile==1.0.1
 idna==2.9
+jdcal==1.4.1
 lxml==4.5.1
+openpyxl==3.0.3
 requests==2.23.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.17
